--- a/pop_main/package.json
+++ b/pop_main/package.json
@@ -1,13 +1,12 @@
 {
   "name": "popeunbin",
   "version": "1.0.0",
-  "description": "",
+  "description": "Pop EunBin, click Park Eunbin characters",
   "main": "index.js",
   "scripts": {
-    "test": "node index.js",
-    "start": "nodemon index.js"
+    "test": "node index.js"
   },
-  "author": "",
+  "author": "EveryEunbin",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.0",
